fix: fullcontainer z-index

--- a/src/components/fullpagecontainer/styles.css
+++ b/src/components/fullpagecontainer/styles.css
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 2000;
+  z-index: 1000;
   position: absolute;
   background-color: #FFF;
 }
